# drakon

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
.github/workflows/: build.yml  check.yml  ci.yml
drakon/: CMakeLists.txt  drakon.cpp  drakon.h
drakon/include/drakon/: Game.h  RenderPipeline.h  Renderable.h  Renderer.h
drakon/src/drakon/common/: Game.cpp  Renderer.cpp
drakon/src/drakon/windows/: Game.cpp  RenderPipeline.cpp  Renderable.cpp  Renderer.cpp
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt  main.cpp
examples/hello-directx/: main.cpp
examples/hello-vulkan/: main.cpp
examples/hello/renderables/: TriangleRenderable.cpp  TriangleRenderable.h
examples/hello/shaders/: triangle.vert
include/drakon/: CMakeLists.txt  Game.h  RenderPipeline.h  Renderable.h  Renderer.h
src/drakon/: Game.cpp  Renderer.cpp
src/drakon/common/: Game.cpp  GamePlatform.cpp  Renderer.cpp
src/drakon/vulkan/: Game.cpp  Renderer.cpp
src/drakon/windows/: Game.cpp  RenderPipeline.cpp  Renderer.cpp
tests/: CMakeLists.txt  stub.cpp
